[package]
name = "hello_world" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["you@example.com"]
include = ["src/**/*", "Cargo.toml"]


[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
hyper = "0.11"
futures = "0.1.14"
prometheus = "0.2"